--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "react-scripts": "^0.6.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
+    "normalize.css": "^5.0.0",
+    "pdfjs-dist": "^1.6.264",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
@@ -16,6 +19,7 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
+    "simplemde": "^1.11.2",
     "todomvc-app-css": "^2.0.6"
   },
   "scripts": {
