--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	compile 'org.projectlombok:lombok'
 	compile 'org.springframework.boot:spring-boot-starter-security'
 	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.security:spring-security-acl'
 
 	compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.8.4'
 	compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.4'
