--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,13 +1,39 @@
-github:
-  client:
-    clientId: e707ca2f9a1556499b5a
-    clientSecret: b6489531c45fc304fea057a8421a8e2c2ba5319f
-    accessTokenUri: https://github.com/login/oauth/access_token
-    userAuthorizationUri: https://github.com/login/oauth/authorize
-    clientAuthenticationScheme: form
-  resource:
-    userInfoUri: https://api.github.com/user
-    
+security:
+  oauth2:
+    client:
+      clientId: 1500e8bb648222bc11a2
+      clientSecret: 9b6cc5cd2ea2d67dcd1262f6cdec3dff61da4c49
+      accessTokenUri: https://github.com/login/oauth/access_token
+      userAuthorizationUri: https://github.com/login/oauth/authorize
+      clientAuthenticationScheme: form
+    resource:
+        userInfoUri: https://api.github.com/user
+        preferTokenInfo: false
+
+#github:
+#  client:
+#    clientId: bd1c0a783ccdd1c9b9e4
+#    clientSecret: 1a9030fbca47a5b2c28e92f19050bb77824b5ad1
+#    accessTokenUri: https://github.com/login/oauth/access_token
+#    userAuthorizationUri: https://github.com/login/oauth/authorize
+#    clientAuthenticationScheme: form
+#  resource:
+#    userInfoUri: https://api.github.com/user
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+
+#github:
+#  client:
+#    clientId: e707ca2f9a1556499b5a
+#    clientSecret: b6489531c45fc304fea057a8421a8e2c2ba5319f
+#    accessTokenUri: https://github.com/login/oauth/access_token
+#    userAuthorizationUri: https://github.com/login/oauth/authorize
+#    clientAuthenticationScheme: form
+#  resource:
+#    userInfoUri: https://api.github.com/user
+
 spring:
   h2:
     console:
