--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
 	id "org.springframework.boot" version "1.4.2.RELEASE"
-	id "org.asciidoctor.convert" version "1.5.3"
 }
 
 apply plugin: 'java'
@@ -32,26 +31,5 @@ dependencies {
 	runtime 'com.h2database:h2'
 	compileOnly 'org.projectlombok:lombok'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
-	testCompile 'org.springframework.restdocs:spring-restdocs-mockmvc'
-}
-
-ext {
-	snippetsDir = file('build/generated-snippets')
-}
-
-test {
-	outputs.dir snippetsDir
-}
-
-asciidoctor {
-	attributes 'snippets': snippetsDir
-	inputs.dir snippetsDir
-	dependsOn test
-}
-
-jar {
-	dependsOn asciidoctor
-	from ("${asciidoctor.outputDir}/html5") {
-		into 'static/docs'
-	}
+	testCompile 'org.springframework.security:spring-security-test:4.1.3.RELEASE'
 }
