--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	compile 'org.springframework.security:spring-security-acl'
 	compile 'org.springframework.security.oauth:spring-security-oauth2'
 	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.session:spring-session:1.3.0.RELEASE'
+	compile 'org.springframework.boot:spring-boot-starter-data-redis'
 	compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 	compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	compile 'com.fasterxml.jackson.module:jackson-module-parameter-names'
