--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
       base-path: /api
   profiles:
     active: production
+  jpa:
+    properties:
+      hibernate:
+        enable_lazy_load_no_trans: true
 
 security:
   oauth2:
