--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,3 @@
 spring:
-  data:
-    rest:
-      base-path: /api
   profiles:
-    active: local
-  jpa:
-    properties:
-      hibernate:
-        enable_lazy_load_no_trans: true
-
-security:
-  oauth2:
-    sso:
-      login-path: /api/login
-
-logging:
-  level:
-    org.springframework.security: DEBUG
-
-github:
-  client:
-    accessTokenUri: https://github.com/login/oauth/access_token
-    userAuthorizationUri: https://github.com/login/oauth/authorize
-    clientAuthenticationScheme: form
-  resource:
-    userInfoUri: https://api.github.com/user
-    preferTokenInfo: false
+    active: common,local,dev
